--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+$blueColor: #61aed4;
+
 body {
   margin: 0;
   padding: 0;
@@ -11,4 +13,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+    color: $blueColor;
 }
