feat: The app is now responsive to different screen sizes. It will update at one break point, when the screen is smaller or greater then 768px. This has been crossed off the readme files todo list

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,11 @@
-.hamburger{
-  width: 25px;
+@media screen and (max-width: 768px){
+  .hamburger{
+    width: 25px;
+  }
+}
+
+@media screen and (min-width: 769px){
+  .hamburger{
+    width: 25px;
+  }
 }
