feat: Installed the google-maps-react module into my project to help incorporate the google maps functionality.

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,8 @@ $dark-gray:  rgb(50, 48, 50);
 }
 
   .hamburger{
-    width: 25px;
+    width: 35px;
+    padding: 5px;
   }
 
   .listViewBar{
@@ -38,7 +39,8 @@ $dark-gray:  rgb(50, 48, 50);
   }
 
   .hamburger{
-    width: 25px;
+    width: 35px;
+    padding: 5px;
   }
 
 .listViewBar{
