--- a/src/index.scss
+++ b/src/index.scss
@@ -18,20 +18,13 @@ $dark-gray:  rgb(50, 48, 50);
     background-color: $dark-gray;
     color: white;
     width: 25%;
-    height: 100%;
+    height: 80%;
     float: left;
     position: fixed;
+    z-index: 10;
+    overflow-y: scroll;
   }
 
-  .mapArea{
-    position: absolute;
-  }
-
-  #map{
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    }
 }
 
 @media screen and (min-width: 769px){
@@ -52,18 +45,11 @@ $dark-gray:  rgb(50, 48, 50);
   background-color: $dark-gray;
   color: white;
   width: 25%;
-  height: 100%;
+  height: 80%;
   float: left;
   position: fixed;
+  z-index: 10;
+  overflow-y: scroll;
   }
 
-  .mapArea{
-    position: absolute;
-  }
-
-#map{
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  }
 }
