--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,15 @@ $dark-gray:  rgb(50, 48, 50);
     z-index: 10;
   }
 
+  .markerIcon{
+    width: 10%;
+    padding: 5px;
+    float: left;
+  }
+
+  .listSelection{
+    padding-top: 20%;
+    padding-bottom: 20%;  }
 }
 
 @media screen and (min-width: 769px){
@@ -62,4 +71,13 @@ $dark-gray:  rgb(50, 48, 50);
   z-index: 10;
   }
 
+  .markerIcon{
+    width: 10%;
+    padding: 5px;
+    float: left;
+  }
+  .listSelection{
+    padding-top: 20%;
+    padding-bottom: 20%;
+  }
 }
