--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,60 @@
 $dark-gray:  rgb(50, 48, 50);
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 414px){
+  * {
+    margin: 0;
+  }
+
+.App-header{
+  background-color: $dark-gray;
+  position: relative;
+  z-index: 10;
+  width: 100%;
+}
+.title{
+  color: white;
+  float: right;
+  font-size: 200%
+}
+  .hamburger{
+    width: 10%;
+    padding: 5px;
+  }
+
+  .listViewBar{
+    background-color: $dark-gray;
+    color: white;
+    width: 75%;
+    height: 100vh;
+    position: absolute;
+    z-index: 10;
+  }
+
+  .search{
+    width: 99%;
+    height: 45px;
+    font-size: 18px;
+  }
+
+  .list{
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    overflow-y: scroll;
+  }
+
+  .markerIcon{
+    width: 6%;
+    padding: 5px;
+    float: left;
+  }
+
+  .listSelection{
+    padding-top: 10%;
+    padding-bottom: 10%;  }
+}
+
+@media screen and (min-width: 415px) and (max-width: 768px){
   * {
     margin: 0;
   }
@@ -24,24 +78,91 @@ $dark-gray:  rgb(50, 48, 50);
   .listViewBar{
     background-color: $dark-gray;
     color: white;
-    width: 15%;
-    height: 95vh;
+    width: 75%;
+    height: 100vh;
     position: absolute;
     z-index: 10;
   }
 
+  .search{
+    width: 99%;
+    height: 45px;
+    font-size: 18px;
+  }
+
+  .list{
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    overflow-y: scroll;
+  }
+
   .markerIcon{
-    width: 10%;
+    width: 4%;
     padding: 5px;
     float: left;
   }
 
   .listSelection{
-    padding-top: 20%;
-    padding-bottom: 20%;  }
+    padding-top: 5%;
+    padding-bottom: 5%;  }
 }
 
-@media screen and (min-width: 769px){
+@media screen and (min-width: 769px) and (max-width: 1366px){
+  * {
+    margin: 0;
+  }
+
+.App-header{
+  background-color: $dark-gray;
+  position: relative;
+  z-index: 10;
+  width: 100%;
+}
+.title{
+  color: white;
+  float: right;
+  font-size: 300%
+}
+  .hamburger{
+    width: 6%;
+    padding: 5px;
+  }
+
+  .listViewBar{
+    background-color: $dark-gray;
+    color: white;
+    width: 75%;
+    height: 100vh;
+    position: absolute;
+    z-index: 10;
+  }
+
+  .search{
+    width: 99%;
+    height: 45px;
+    font-size: 30px;
+  }
+
+  .list{
+    width: 100%;
+    height: 100%;
+    font-size: 30px;
+    overflow-y: scroll;
+  }
+
+  .markerIcon{
+    width: 4%;
+    padding: 5px;
+    float: left;
+  }
+
+  .listSelection{
+    padding-top: 5%;
+    padding-bottom: 5%;  }
+}
+
+@media screen and (min-width: 1367px){
   * {
     margin: 0;
   }
@@ -66,9 +187,19 @@ $dark-gray:  rgb(50, 48, 50);
   background-color: $dark-gray;
   color: white;
   width: 15%;
-  height: 95vh;
+  height: 94vh;
   position: absolute;
   z-index: 10;
+  }
+
+  .search{
+    width: 100%;
+    font-size: 30px;
+  }
+
+  .list{
+    width: 100%;
+    height: 100%;
   }
 
   .markerIcon{
@@ -76,8 +207,9 @@ $dark-gray:  rgb(50, 48, 50);
     padding: 5px;
     float: left;
   }
+
   .listSelection{
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 15%;
+    padding-bottom: 15%;
   }
 }
