--- a/src/index.scss
+++ b/src/index.scss
@@ -1,57 +1,39 @@
-$dark-gray:  rgb(50, 48, 50);
+@import "mixins";
 
 @media screen and (max-width: 414px){
   * {
     margin: 0;
   }
 
-.App-header{
-  background-color: $dark-gray;
-  position: relative;
-  z-index: 10;
-  width: 100%;
-}
-.title{
-  color: white;
-  float: right;
-  font-size: 200%
-}
+  .App-header{
+    @include app-header;
+  }
+  .title{
+    @include title(200%);
+  }
   .hamburger{
-    width: 10%;
-    padding: 5px;
+    @include hamburger(10%);
   }
 
   .listViewBar{
-    background-color: $dark-gray;
-    color: white;
-    width: 75%;
-    height: 100vh;
-    position: absolute;
-    z-index: 10;
+    @include list-viewbar(75%);
   }
 
   .search{
-    width: 99%;
-    height: 45px;
-    font-size: 18px;
+    @include search(45px, 18px);
   }
 
   .list{
-    width: 100%;
-    height: 100%;
-    font-size: 20px;
-    overflow-y: scroll;
+    @include list(20px, scroll);
   }
 
   .markerIcon{
-    width: 6%;
-    padding: 5px;
-    float: left;
+    @include marker-icon(6%);
   }
 
   .listSelection{
-    padding-top: 10%;
-    padding-bottom: 10%;  }
+    @include list-selection(10%, 10%);
+  }
 }
 
 @media screen and (min-width: 415px) and (max-width: 768px){
@@ -59,53 +41,35 @@ $dark-gray:  rgb(50, 48, 50);
     margin: 0;
   }
 
-.App-header{
-  background-color: $dark-gray;
-  position: relative;
-  z-index: 10;
-  width: 100%;
-}
-.title{
-  color: white;
-  float: right;
-  font-size: 200%
-}
+  .App-header{
+    @include app-header;
+  }
+  .title{
+    @include title(200%);
+  }
   .hamburger{
-    width: 8%;
-    padding: 5px;
+    @include hamburger(8%);
   }
 
   .listViewBar{
-    background-color: $dark-gray;
-    color: white;
-    width: 75%;
-    height: 100vh;
-    position: absolute;
-    z-index: 10;
+    @include list-viewbar(75%);
   }
 
   .search{
-    width: 99%;
-    height: 45px;
-    font-size: 18px;
+    @include search(45px, 18px);
   }
 
   .list{
-    width: 100%;
-    height: 100%;
-    font-size: 20px;
-    overflow-y: scroll;
+    @include list(20px, scroll);
   }
 
   .markerIcon{
-    width: 4%;
-    padding: 5px;
-    float: left;
+    @include marker-icon(4%);
   }
 
   .listSelection{
-    padding-top: 5%;
-    padding-bottom: 5%;  }
+    @include list-selection(5%, 5%);
+  }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1366px){
@@ -113,53 +77,35 @@ $dark-gray:  rgb(50, 48, 50);
     margin: 0;
   }
 
-.App-header{
-  background-color: $dark-gray;
-  position: relative;
-  z-index: 10;
-  width: 100%;
-}
-.title{
-  color: white;
-  float: right;
-  font-size: 300%
-}
+  .App-header{
+    @include app-header;
+  }
+  .title{
+    @include title(300%);
+  }
   .hamburger{
-    width: 6%;
-    padding: 5px;
+    @include hamburger(6%);
   }
 
   .listViewBar{
-    background-color: $dark-gray;
-    color: white;
-    width: 75%;
-    height: 100vh;
-    position: absolute;
-    z-index: 10;
+    @include list-viewbar(75%);
   }
 
   .search{
-    width: 99%;
-    height: 45px;
-    font-size: 30px;
+    @include search(45px, 30px);
   }
 
   .list{
-    width: 100%;
-    height: 100%;
-    font-size: 30px;
-    overflow-y: scroll;
+    @include list(30px, scroll);
   }
 
   .markerIcon{
-    width: 4%;
-    padding: 5px;
-    float: left;
+    @include marker-icon(4%);
   }
 
   .listSelection{
-    padding-top: 5%;
-    padding-bottom: 5%;  }
+    @include list-selection(5%, 5%);
+  }
 }
 
 @media screen and (min-width: 1367px){
@@ -168,48 +114,32 @@ $dark-gray:  rgb(50, 48, 50);
   }
 
   .App-header{
-    background-color: $dark-gray;
-    position: relative;
-    z-index: 10;
-    width: 100%;
+    @include app-header;
   }
   .title{
-    color: white;
-    float: right;
-    font-size: 300%
+    @include title(300%);
   }
   .hamburger{
-    width: 3%;
-    padding: 5px;
+    @include hamburger(3%);
   }
 
-.listViewBar{
-  background-color: $dark-gray;
-  color: white;
-  width: 15%;
-  height: 94vh;
-  position: absolute;
-  z-index: 10;
+  .listViewBar{
+    @include list-viewbar(15%);
   }
 
   .search{
-    width: 100%;
-    font-size: 30px;
+    @include search(30px, 30px);
   }
 
   .list{
-    width: 100%;
-    height: 100%;
+    @include list(20px, none);
   }
 
   .markerIcon{
-    width: 10%;
-    padding: 5px;
-    float: left;
+    @include marker-icon(10%);
   }
 
   .listSelection{
-    padding-top: 15%;
-    padding-bottom: 15%;
+    @include list-selection(15%, 15%);
   }
 }
